src/main/default/objects/OrderItem/fields/DR_Cancelled_Quantity__c.field-meta.xml
<CustomField>
    <fullName>DR_Cancelled_Quantity__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Cancelled Line Item Quantity</description>
    <inlineHelpText>Cancelled Line Item Quantity</inlineHelpText>
    <label>DR Cancelled Quantity</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>