src/main/default/objects/OrderItem/fields/DR_Duty__c.field-meta.xml
<CustomField>
    <fullName>DR_Duty__c</fullName>
    <description>Stores information for DR Duty</description>
    <label>DR Duty</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>