src/main/default/objects/OrderItem/fields/DR_Fulfilled_Quantity__c.field-meta.xml
<CustomField>
    <fullName>DR_Fulfilled_Quantity__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Fulfilled Line Item Quantity</description>
    <inlineHelpText>Fulfilled Line Item Quantity</inlineHelpText>
    <label>DR Fulfilled Quantity</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>