src/main/default/objects/OrderItem/fields/DR_IOR_Tax__c.field-meta.xml
<CustomField>
    <fullName>DR_IOR_Tax__c</fullName>
    <description>Capture IOR tax information for order Item</description>
    <label>DR IOR Tax</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>