src/main/default/objects/OrderItem/fields/DR_Open_Quantity__c.field-meta.xml
<CustomField>
    <fullName>DR_Open_Quantity__c</fullName>
    <description>Line Item Quantity Available for Fulfillment or Cancellation</description>
    <inlineHelpText>Line Item Quantity Available for Fulfillment or Cancellation</inlineHelpText>
    <label>DR Open Quantity</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>