src/main/default/objects/OrderItem/fields/DR_Order_Item_Id__c.field-meta.xml
<CustomField>
    <fullName>DR_Order_Item_Id__c</fullName>
    <label>DR Order Item Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>