src/main/default/objects/OrderItem/fields/DR_Order_Item_State__c.field-meta.xml
<CustomField>
    <fullName>DR_Order_Item_State__c</fullName>
    <description>Order item State at DR end</description>
    <inlineHelpText>Order item State at DR end</inlineHelpText>
    <label>Digital River Order Item State</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>created</fullName>
            </value>
            <value>
                <fullName>fulfilled</fullName>
            </value>
            <value>
                <fullName>cancelled</fullName>
            </value>
            <value>
                <fullName>partially_fulfilled</fullName>
            </value>
            <value>
                <fullName>partially_cancelled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>