src/main/default/objects/OrderItem/fields/DR_Regulatory_Fee__c.field-meta.xml
<CustomField>
    <fullName>DR_Regulatory_Fee__c</fullName>
    <label>DR Regulatory Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>